Ultimate details added to design

--- a/design/index.html
+++ b/design/index.html
@@ -6,38 +6,54 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
-  <title>Chatcord</title>
+  <title>Wasap</title>
 </head>
 <body>
     <div class="container">
       <aside class="aside">
         <div class="logo">
-          <h1>Chatcord</h1>
+          <h1>WASAP</h1>
         </div>
+
         <div class="chats">
           <div class="chats-container">
             <div class="chats-container__arrow"><span><i class="fas fa-angle-down"></i></span></div>
             <div class="chats-container__title"><span>Private Chats</span></div>
-            <div class="chats-container__plus"><span><i class="fas fa-plus"></i></span></div>
           </div>
           <div class="chats-list">
-            <ul>
-              <li>Username 1</li>
-              <li>Username 2</li>
-            </ul>
+              <div class="search-chat">
+                <button type="button" class="button-add-chat">Add Chat</button>
+                <input type="text" placeholder="Search chat..." />
+                <div class="results">
+                  <div class="results-item">username 1</div>
+                  <div class="results-item">username 2</div>
+                  <div class="results-item">username 3</div>
+                  <div class="results-item">username 4</div>
+                  <div class="results-item">username 5</div>
+                  <div class="results-item">username 6</div>
+                </div>
+              </div>
           </div>
         </div>
+
         <div class="chats">
           <div class="chats-container">
             <div class="chats-container__arrow"><span><i class="fas fa-angle-down"></i></span></div>
             <div class="chats-container__title"><span>Public Chats</span></div>
-            <div class="chats-container__plus"><span><i class="fas fa-plus"></i></span></div>
           </div>
           <div class="chats-list">
-            <ul>
-              <li>Cats</li>
-              <li>Dogs</li>
-            </ul>
+              <div class="search-chat">
+                <button type="button" class="button-add-chat">Add Chat</button>
+                <input type="text" placeholder="Search chat..." />
+                <div class="results">
+                  <div class="results-item">Cats</div>
+                  <div class="results-item">Dogs</div>
+                  <div class="results-item">Dogs</div>
+                  <div class="results-item">Dogs</div>
+                  <div class="results-item">Dogs</div>
+                  <div class="results-item">Dogs</div>
+                </div>
+              </div>
           </div>
         </div>
       </aside>
